
2021-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* config.def (larger-redefines): changed to support option from boolean
	  larger-redefines-ok
	* warning.def (cb_warn_larger_01_redefines): new warning for possibly
	  problematic but allowed level 01 non-external REDEFINE
	* field.c (compute_size): cater for cb_larger_redefines and
	  cb_warn_larger_01_redefines
	* codegen.c (output_display_fields, output_field_display): add validation
	  (level 88) items in commented output if COBC_GEN_DUMP_COMMENTS is active
	  with full list of VALUE constants

2021-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_build_full_field_reference): fix bug #776
	  infinite loop for FILLER definitions above KEY in OCCURS
	* field.c (copy_into_field_recursive): explicit const specification for
	  key references

2021-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_integer, output_long_integer): use
	  integer exponentiation in libcob instead of floating point
	  from libmath/math.h, fixing #702

2021-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* ppparse.y, pplex.l, scanner.l: implementation of COBOL-WORDS directive
	* reserved.c, cobc.h, tree.h: added missing COBOL 202x reserved words
	  and intrinsic functions to the internal lists
	* parser.y: _parsing_ of INSPECT BACKWARD, SEND mcs

2021-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, field.c: partial merge of 2020-01-12 related to bug #513

2021-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_file_initialization): don't generate attribute
	  setting which is done in cob_file_malloc / cob_file_external_addr
	* codegen.c (output_module_init_function): set module->gc_version

2021-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): skip initial "." when printing COB_EXE_EXT
	* cobc.c (process_command_line): postpone version output for --verbose
	* cobc.c (set_listing_date): use formatted instead of ANSI timestamp,