@@ -1,4 +1,11 @@
 
+2021-10-23  Simon Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c (process_command_line) [__TINYC__, __OS400__): early exit when
+	  assembling is requested, for the testsuite with a "skip" status
+	* cobc.c: removed unused aflag_set, renamed gflag_set to source_debugging
+	* cobc.c (process) [__OS400__]: simplified source-debugging handling
+
 2021-10-19  Simon Sobisch <simonsobisch@gnu.org>
 
 	* config.def (larger-redefines): changed to support option from boolean
@@ -9,7 +16,7 @@
 	  cb_warn_larger_01_redefines
 	* codegen.c (output_display_fields, output_field_display): add validation
 	  (level 88) items in commented output if COBC_GEN_DUMP_COMMENTS is active
-	  with full list of VALUE constants
+	  including the full list of their VALUE constants
 
 2021-10-18  Simon Sobisch <simonsobisch@gnu.org>
 
